--- a/Html/index.html
+++ b/Html/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav>        
+            <a href=""><img src="../img/logo/1.png" alt=""></a>
            <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT US </a></li>
