upgrade on nav menu

--- a/Html/index.html
+++ b/Html/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <header>
-      <nav>        
+      <nav class="main-menu">        
           <a href=""><img src="../img/logo/1.png" alt=""></a>
           <ul>
             <li><a href="">HOME</a></li>
@@ -40,11 +40,19 @@
             <li><a href="">ACDEMIC PROGRAMS</a></li>
             <li><a href="">CAMPUS</a></li>
             <li><a href="">CONTACT US</a></li>
-         </ul> 
+         </ul>
+      </nav>
+      <nav class="sub-menu">
+        <ul>
+          <li><a href="">Board</a></li>
+          <li><a href="">Compliance</a></li>
+          <li><a href="">School Tour</a></li>
+          <li><a href="">Careers</a></li>
+        </ul>
       </nav>
 
             <!-- image slider -->
-            <section>
+            <section id="mySlider">
               <div id="thumbnail-slider" class="splide">
                 <div class="splide__track">
                       <ul class="splide__list">
