--- a/Html/index.html
+++ b/Html/index.html
@@ -49,21 +49,23 @@
                 <div class="splide__track">
                       <ul class="splide__list">
                           <li class="splide__slide">
-                              <img src="../img/slide1.jpg">
+                              <img src="../images/slider/180627_Newark-FrontCorner_037.jpg">
                               <div>
-                                Description 01
+                                At WPHS, we provide students with an education experience that combines joy, rigor, and hard work every day. We are committed to providing all students with a well-rounded education that prepares them for college and beyond
                             </div>
                           </li>
                           <li class="splide__slide">
-                              <img src="../img/slide2.jpg">
+                              <img src="../images/slider/DonTre-Driving-School-New-Jersey-Driver-Training-30-Hour-Classroom-Driver-Theory-Course-768x512.jpg">
                               <div>
-                                Description 02
+                                <h3>College Access and Success</h3>
+
+                                Our college success team works with our students to ensure our high school students are prepared for college and beyond.
                             </div>
                           </li>
                           <li class="splide__slide">
-                              <img src="../img/slide3.jpg">
+                              <img src="../images/slider/OIP.jpeg">
                               <div>
-                                Description 03
+                                The high school’s College Access and Success team is active in organizing school visits by college recruiters as well as student trips to college campuses. The team further supports college preparation by coordinating student participation in summer and year-long enrichment programs to strengthen preparation for college. Our college team spends much of its time providing support to alumni as they navigate college life.
                             </div>
                           </li>
                       </ul>
