--- a/Html/index.html
+++ b/Html/index.html
@@ -67,7 +67,7 @@
                               <div>
                                 <h3>College Access and Success</h3>
 
-                                Our college success team works with our students to ensure our high school students are prepared for college and beyond.
+                                <p>Our college success team works with our students to ensure our high school students are prepared for college and beyond.</p>
                             </div>
                           </li>
                           <li class="splide__slide">
