--- a/Html/index.html
+++ b/Html/index.html
@@ -87,7 +87,11 @@
             </section>
     </header>   
     <main>
-        <!-- <img src="../images/example/001-medium.jpg" width="1050px" class="circles" /> -->
+
+       <section>
+        <h1>Outstanding K-12 Education </h1>
+        <p>North Star Academy Washington Park High School is a free, public high school located in Newark, NJ, near Rutgers University. We prepare each student to enter, succeed in, and graduate from college by developing within them extraordinary academic skills, a life-long passion for learning, and the values that define strong character. Students who attend an Uncommon Schools North Star Academy elementary and middle school have the opportunity to attend a North Star Academy high school, including WPHS for grades 9 to 12.</p>
+       </section>
     </main> 
     <script src="../js/slider.js"></script>
 </body>
