--- a/Html/index.html
+++ b/Html/index.html
@@ -52,42 +52,38 @@
       </nav>
 
             <!-- image slider -->
-            <section id="mySlider">
-              <div id="thumbnail-slider" class="splide">
-                <div class="splide__track">
-                      <ul class="splide__list">
-                          <li class="splide__slide">
-                              <img src="../images/slider/180627_Newark-FrontCorner_037.jpg">
-                              <div>
-                                At WPHS, we provide students with an education experience that combines joy, rigor, and hard work every day. We are committed to providing all students with a well-rounded education that prepares them for college and beyond
-                            </div>
-                          </li>
-                          <li class="splide__slide">
-                              <img src="../images/slider/DonTre-Driving-School-New-Jersey-Driver-Training-30-Hour-Classroom-Driver-Theory-Course-768x512.jpg">
-                              <div>
-                                <h3>College Access and Success</h3>
-
-                                <p>Our college success team works with our students to ensure our high school students are prepared for college and beyond.</p>
-                            </div>
-                          </li>
-                          <li class="splide__slide">
-                              <img src="../images/slider/OIP.jpeg">
-                              <div>
-                                The high school’s College Access and Success team is active in organizing school visits by college recruiters as well as student trips to college campuses. The team further supports college preparation by coordinating student participation in summer and year-long enrichment programs to strengthen preparation for college. Our college team spends much of its time providing support to alumni as they navigate college life.
-                            </div>
-                          </li>
-                      </ul>
-                </div>
-        
-                <div class="splide__progress">
-                    <div class="splide__progress__bar">
-                    </div>
-                </div>
+            <div id="thumbnail-slider" class="splide thumbnail-slider">
+              <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">
+                            <img src="../images/slider/180627_Newark-FrontCorner_037.jpg">
+                            <div>
+                              At WPHS, we provide students with an education experience that combines joy, rigor, and hard work every day. We are committed to providing all students with a well-rounded education that prepares them for college and beyond
+                          </div>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="../images/slider/DonTre-Driving-School-New-Jersey-Driver-Training-30-Hour-Classroom-Driver-Theory-Course-768x512.jpg">
+                            <div>
+                              <h3>College Access and Success</h3>
+                              <p>Our college success team works with our students to ensure our high school students are prepared for college and beyond.</p>
+                          </div>
+                        </li>
+                        <li class="splide__slide">
+                            <img src="../images/slider/OIP.jpeg">
+                            <div>
+                              The high school’s College Access and Success team is active in organizing school visits by college recruiters as well as student trips to college campuses. The team further supports college preparation by coordinating student participation in summer and year-long enrichment programs to strengthen preparation for college. Our college team spends much of its time providing support to alumni as they navigate college life.
+                          </div>
+                        </li>
+                    </ul>
               </div>
-            </section>
+      
+              <div class="splide__progress">
+                  <div class="splide__progress__bar">
+                  </div>
+              </div>
+            </div>
     </header>   
     <main>
-
        <section>
         <h1>Outstanding K-12 Education </h1>
         <p>North Star Academy Washington Park High School is a free, public high school located in Newark, NJ, near Rutgers University. We prepare each student to enter, succeed in, and graduate from college by developing within them extraordinary academic skills, a life-long passion for learning, and the values that define strong character. Students who attend an Uncommon Schools North Star Academy elementary and middle school have the opportunity to attend a North Star Academy high school, including WPHS for grades 9 to 12.</p>
