--- a/Html/index.html
+++ b/Html/index.html
@@ -92,7 +92,25 @@
         <h1>Outstanding K-12 Education </h1>
         <p>North Star Academy Washington Park High School is a free, public high school located in Newark, NJ, near Rutgers University. We prepare each student to enter, succeed in, and graduate from college by developing within them extraordinary academic skills, a life-long passion for learning, and the values that define strong character. Students who attend an Uncommon Schools North Star Academy elementary and middle school have the opportunity to attend a North Star Academy high school, including WPHS for grades 9 to 12.</p>
        </section>
+       <div id="overlay" class="card">
+        <p>Elementary</p>
+        <h3>In elementary school, we cultivate a love for learning in every child. Our teaching is fast-paced, rigorous, and fun—with plenty of celebratory cheers built into each lesson. We build community around values like respect, hard work, and kindness, shaping the hearts as well as the minds of our students. Our goal is for students to love school from the very start.
+        </h3>
+        <div class="card">
+          <p>Middle</p>
+          <h3>In middle school, our students learn the academic skills they need to succeed in high school, while developing their own identities as citizens of their communities and of the world. They learn to think deeply, to debate passionately, and to engage thoughtfully with new people, places, and ideas.
+
+          </h3>
+        </div>
+       <div class="card">
+        <p>High</p>
+        <h3>Our high school students make the transition to becoming the leaders of tomorrow. They build intellectual expertise through rigorous coursework and AP classes. They develop their passion and leadership through a range of enrichment and after-school activities. They graduate ready to thrive in college and beyond.
+
+        </h3>
+       </div>
+       </div>
     </main> 
+
     <script src="../js/slider.js"></script>
 </body>
 </html>
