--- a/Html/index.html
+++ b/Html/index.html
@@ -58,6 +58,7 @@
                         <li class="splide__slide">
                             <img src="../images/slider/180627_Newark-FrontCorner_037.jpg">
                             <div>
+                              <h3>The High School Experience</h3>
                               At WPHS, we provide students with an education experience that combines joy, rigor, and hard work every day. We are committed to providing all students with a well-rounded education that prepares them for college and beyond
                           </div>
                         </li>
@@ -71,6 +72,7 @@
                         <li class="splide__slide">
                             <img src="../images/slider/OIP.jpeg">
                             <div>
+                              <h3>Preparing for College and Beyond</h3>
                               The high school’s College Access and Success team is active in organizing school visits by college recruiters as well as student trips to college campuses. The team further supports college preparation by coordinating student participation in summer and year-long enrichment programs to strengthen preparation for college. Our college team spends much of its time providing support to alumni as they navigate college life.
                           </div>
                         </li>
