--- a/Html/index.html
+++ b/Html/index.html
@@ -96,24 +96,27 @@
             <!-- first column -->
             <div class="division-col bgimage1">
               <div class="overlay">
-  
-              <div class="overlay-title"> <h3>Elementary</h3> </div>  
-                <div class="overlay-subtitle"> <p>In elementary school, we cultivate a love for learning in every child. Our teaching is fast-paced, rigorous, and fun—with plenty of celebratory cheers built into each lesson. We build community around values like respect, hard work, and kindness, shaping the hearts as well as the minds of our students. Our goal is for students to love school from the very start.</p></div>
+                <div class="content">
+                  <h3>Elementary</h3>
+                  <p>In elementary school, we cultivate a love for learning in every child. Our teaching is fast-paced, rigorous, and fun—with plenty of celebratory cheers built into each lesson. We build community around values like respect, hard work, and kindness, shaping the hearts as well as the minds of our students. Our goal is for students to love school from the very start.</p>
+                </div>
               </div>
              </div>
 
              <!-- second column -->
              <div class="division-col bgimage2">
               <div class="overlay">
-               <div class="overlay-title"> <h3>Middle</h3></div>
-               <div class="overlay-subtitle"> <p>In middle school, our students learn the academic skills they need to succeed in high school, while developing their own identities as citizens of their communities and of the world. They learn to think deeply, to debate passionately, and to engage thoughtfully with new people, places, and ideas.</p></div>
+                <div class="content">
+                    <h3>Middle</h3>
+                    <p>In middle school, our students learn the academic skills they need to succeed in high school, while developing their own identities as citizens of their communities and of the world. They learn to think deeply, to debate passionately, and to engage thoughtfully with new people, places, and ideas.</p>
+                </div>
               </div>
             </div>
             <!-- third column -->
            <div class="division-col bgimage3">
             <div class="overlay">
-             <div class="overlay-title"> <h3>High School</h3></div>
-              <div class="overlay-subtitle"><p>Our high school students make the transition to becoming the leaders of tomorrow. They build intellectual expertise through rigorous coursework and AP classes. They develop their passion and leadership through a range of enrichment and after-school activities. They graduate ready to thrive in college and beyond.</p></div>
+                <h3>High School</h3>
+                <p>Our high school students make the transition to becoming the leaders of tomorrow. They build intellectual expertise through rigorous coursework and AP classes. They develop their passion and leadership through a range of enrichment and after-school activities. They graduate ready to thrive in college and beyond.</p>
             </div>
            </div>
 
