--- a/Html/index.html
+++ b/Html/index.html
@@ -88,9 +88,7 @@
     <main>
        <section class="section-container" id="division">
           <h1>Outstanding K-12 Education </h1>
-          <p class="subtitle" >Since our founding in 1997, our free public schools have served Newark families with an <br> award-winning instructional model that supports students' academic and personal <br> growth. Our teachers infuse joy into every day, creating an active engaged learning <br> environment and preparing every student to succeed in college and beyond.
-
-          </p>
+          <p class="subtitle">Since our founding in 1997, our free public schools have served Newark families with an <br> award-winning instructional model that supports students' academic and personal <br> growth. Our teachers infuse joy into every day, creating an active engaged learning <br> environment and preparing every student to succeed in college and beyond.</p>
 
           <div class="row">
             <!-- first column -->
@@ -115,8 +113,10 @@
             <!-- third column -->
            <div class="division-col bgimage3">
             <div class="overlay">
-                <h3>High School</h3>
+                <div class="content">
+                  <h3>High School</h3>
                 <p>Our high school students make the transition to becoming the leaders of tomorrow. They build intellectual expertise through rigorous coursework and AP classes. They develop their passion and leadership through a range of enrichment and after-school activities. They graduate ready to thrive in college and beyond.</p>
+                </div>
             </div>
            </div>
 
