--- a/Html/index.html
+++ b/Html/index.html
@@ -33,14 +33,16 @@
     <header>
       <nav class="main-menu">        
           <a href=""><img src="../img/logo/1.png" alt=""></a>
-          <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT US </a></li>
-            <li><a href="">ENROLL</a></li>
-            <li><a href="">ACDEMIC PROGRAMS</a></li>
-            <li><a href="">CAMPUS</a></li>
-            <li><a href="">CONTACT US</a></li>
-         </ul>
+      <div class="nav-links">
+        <ul>
+          <li><a href="">HOME</a></li>
+          <li><a href="">ABOUT US </a></li>
+          <li><a href="">ENROLL</a></li>
+          <li><a href="">ACDEMIC PROGRAMS</a></li>
+          <li><a href="">CAMPUS</a></li>
+          <li><a href="">CONTACT US</a></li>
+       </ul>
+      </div>
       </nav>
       <nav class="sub-menu">
         <ul>
